@@ -1,3 +1,8 @@
+2009-07-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* mi/mi-cmd-var.c (mi_cmd_var_update): Replace a while loop by for loop.
+	* varobj.c (varobj_invalidate): Replace a while loop by for loop.
+
 2009-07-07  Vladimir Prus  <vladimir@codesourcery.com>
 
 	Fix hang in floating varobjs.
